<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Puy du fou</string>
    <string name="action_settings">Paramètres</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_map">Carte</string>
    <string name="mapKey">AIzaSyAZrZU8sJ8QVRxkifAwTUyZk18iCofxaa8</string>
    <string name="title_activity_show_list">Liste des spectacles</string>
    <string name="title_activity_show">Information spectacle</string>
    <string name="title_activity_shop_list">Liste des boutiques</string>
    <string name="title_activity_shop">Information boutique</string>
    <string name="title_activity_planning">Planning</string>
    <string name="title_activity_restaurants_list">Liste des restaurants</string>
    <string name="title_activity_restaurant">Information restaurant</string>
    <string name="title_activity_social">SocialActivity</string>
    <string name="title_activity_photo">PhotoActivity</string>
    <string name="title_activity_waiting">WaitingActivity</string>
    <string name="title_activity_waitinglist">WaitingListActivity</string>
    <string name="note">Note :</string>
    <string name="menu">Menu et tarifs :</string>
    <string name="description">Description :</string>
    <string name="planning">Mon planning</string>
    <string name="ajoutspec">Ajouter un spectacle</string>
    <string name="horaires">Horaires :</string>
    <string name="ddc">Date de création :</string>
    <string name="actspec">Acteurs :</string>
    <string name="duree">Durée :</string>
    <string name="activity_restaurant">Localisation :</string>
    <string name="activity_show_event">Evènement historique lié :</string>
    <color name="white">#FFFFFF</color> 
</resources>
