<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".RestaurantActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@color/white"
        android:paddingLeft="20dp" >

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/planning" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/programme" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/boutique" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/map" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/social" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="505dp"
        android:layout_above="@+id/linearLayout1" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="505dp"
            android:paddingLeft="10dp" >

            <FrameLayout
                android:id="@+id/imgrestau"
                android:layout_width="match_parent"
                android:layout_height="80dp" >
            </FrameLayout>

            <TextView
                android:id="@+id/noterestau"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/imgrestau"
                android:layout_marginTop="19dp"
                android:text="@string/note"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="20sp" />

            <RatingBar
                android:id="@+id/noteetoilerestau"
                style="@style/AppBaseTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/noterestau"
                android:numStars="5" />

            <TextView
                android:id="@+id/menurestau"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/noteetoilerestau"
                android:text="@string/menu"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="20sp" />

            <ListView
                android:id="@+id/menurestaudesc"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/menurestau" >
            </ListView>

            <TextView
                android:id="@+id/descrestau"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/menurestaudesc"
                android:layout_marginTop="12dp"
                android:text="@string/description"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/descrestaudesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/descrestau" />

            <TextView
                android:id="@+id/textViewLocalisation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/descrestaudesc"
                android:layout_marginTop="17dp"
                android:text="@string/activity_restaurant" 
				android:textSize="20sp" />

            <fragment
                android:id="@+id/fragment1"
                android:name="com.google.android.gms.maps.MapFragment"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_below="@+id/textViewLocalisation"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>